[project]
name = "ajl"
version = "0.1.0"
description = "AWS JSON Line a streaming cli for the AWS API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.12",
    "case-converter>=1.2.0",
    "colorama>=0.4.6",
    "joblib>=1.5.1",
    "jq>=1.10.0",
    "jsonlines>=4.0.0",
    "orjson>=3.11.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "ruff>=0.12.9",
    "tqdm>=4.67.1",
]
