[project]
name = "ajl"
dynamic = ["version"]
description = "AWS JSON Line a streaming cli for the AWS API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.12",
    "case-converter>=1.2.0",
    "colorama>=0.4.6",
    "joblib>=1.5.1",
    "jq>=1.10.0",
    "jsonlines>=4.0.0",
    "orjson>=3.11.3",
    "pyrage>=1.2.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

# directions from https://realpython.com/python-uv/#handling-python-projects-with-uv
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.9",
]

[project.scripts]
ajl = "ajl.main:main"

[build-system]
requires = ["setuptools>=78.1.0", "setuptools-scm>=8", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

# version comes from git tags (v0.2.0 -> 0.2.0; untagged commits get a
# .devN+g<sha> suffix); the release flow is `git tag vX.Y.Z`, not a file edit
[tool.setuptools_scm]
version_file = "src/ajl/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ajl = ["models/*.json"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
